--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,12 @@ pool:
 strategy:
   matrix:
     Python310:
-      python.version: '3.8'
+      python.version: '3.10'
+    Python311:
+      python.version: '3.11'
+    Python312:
+      python.version: '3.12'
+
 steps:
   - task: UsePythonVersion@0
     inputs:
