--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,14 @@ pool:
 
 strategy:
   matrix:
-    Python310:
-      python.version: '3.10'
     Python311:
       python.version: '3.11'
-    Python312:
-      python.version: '3.12'
 
 steps:
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(python.version)'
+      architecture: x64
     displayName: 'Use Python $(python.version)'
 
   - script: |
