--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
       versionSpec: '$(python.version)'
       architecture: x64
       addToPath: true
+      disableDownloadFromRegistry: false
     displayName: 'Use Python $(python.version)'
 
   - script: |
